cool ui plus some login reditrect stuff
// todo: authenticate at home screen

--- a/src/main/resources/views/_login.html
+++ b/src/main/resources/views/_login.html
@@ -41,6 +41,7 @@
     }
     function loggedIn(){
         console.log("Successfully logged in!");
+        document.location.href = "./home";
     }
     const xfaurl = "http://localhost";
     const cuid = document.getElementById("cuid").content;
